--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Jinxuan(Jin) Blog
 SEOTitle: Jinxuan(Jin) Mu Blog | 慕金轩的博客
 header-img: img/home_bg.jpg
 email: jinxuanmu1028@gmail.com
-description: "这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
+description: "Hi, this is Jinxuan(Jin)'s blog. Welcome to my world."
 keyword: "慕金轩, Jinxuan, Jin, jinxuan, jinxuanmu, 慕金轩的博客, Jin Blog, 博客, 个人网站, 互联网, 产品经理, 产品, 运营, 营销, 品牌, product, product manager, operation, marketing, program management "
 url: "https://jinxaunmu/jinxuanblog.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
