--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ netease_comment: false
 # ba_track_id: [your track id]
 
 # Google Analytics
-ga_track_id: "UA-288667102" # Format: UA-xxxxxx-xx
+ga_track_id: "G-9818W93TPM" # Format: UA-xxxxxx-xx
 ga_domain: auto
 
 # Sidebar settings
